[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Singletons/AudioManager/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Hurt2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/Door.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/Jump2.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/Footsteps.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/RhinocerosLoopClock.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/Gaslamp Funworks.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Win.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Poof.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Singletons/AudioManager/FalasGnomo.tscn" type="PackedScene" id=10]

[node name="AudioManager" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Hurt" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="Door" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Jump" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Footsteps" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="BackgroundCutscene" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Victory" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Poof" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="FalasGnomo" parent="." index="8" instance=ExtResource( 10 )]


